# ScaleRTL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  case_list.txt  comp-time.py  env.sh  perflib.py
cases/: Conv2D_extended_1.fir  Conv2D_extended_128.fir  Conv2D_extended_16.fir  Conv2D_extended_2.fir  Conv2D_extended_32.fir  Conv2D_extended_4.fir  Conv2D_extended_64.fir  Conv2D_extended_8.fir  GEMM_extended_1.fir  GEMM_extended_128.fir  GEMM_extended_16.fir  GEMM_extended_2.fir  GEMM_extended_32.fir  GEMM_extended_4.fir  GEMM_extended_64.fir  GEMM_extended_8.fir  Gemmini_extended_1.fir  Gemmini_extended_128.fir  Gemmini_extended_16.fir  Gemmini_extended_2.fir  Gemmini_extended_32.fir  Gemmini_extended_4.fir  Gemmini_extended_64.fir  Gemmini_extended_8.fir  SIGMA_extended_1.fir  SIGMA_extended_128.fir  SIGMA_extended_16.fir  SIGMA_extended_2.fir  SIGMA_extended_32.fir  SIGMA_extended_4.fir  SIGMA_extended_64.fir  SIGMA_extended_8.fir
include/ksim/: KSimOps.td  KSimPasses.h  Passes.td
lib/: KSimDialect.cpp
lib/Transforms/: Batch.cpp  BatchFlattenFunc.cpp  CMakeLists.txt  CountInstance.cpp  CountInstanceUnderTop.cpp  ExtractInstanceByName.cpp  GlobalToStructPass.cpp  LowerState.cpp  LowerToLLVM.cpp  NVGPUGlobalToStruct.cpp  Partition.cpp  PartitionV2.cpp  TemporalFusion.cpp  TemporalFusion2.cpp
lib/Utils/: LLVMQueue.cpp
runs/: common.mk
runs/scaleRTL-C/: benchmark_generator.py  compile.sh
tools/: CMakeLists.txt
tools/scaleRTL/: CMakeLists.txt  scaleRTL.cpp
tools/scaleRTL-opt/: CMakeLists.txt  scaleRTL-opt.cpp
(+3 files in other folders)
